Fixed some layout issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+
 html, body {
   background-color: black;
+  color: white !important;
+  font-family: 'Inter', sans-serif !important;
 }
 
 :root {
@@ -11,4 +16,5 @@ html, body {
   --lightblue: rgba(0, 55, 193, 0.6 );
   --transparentblue: rgba(0, 55, 193, 0.2);
   --gray: rgba(30, 30, 30, 1);
+  --lightgray: rgb(156 163 175);
 }
